added basic experience calculation but the calculation should be moved to the server or a central location

--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,5 +1,6 @@
 <template name="userProfile">
   <h3>User: {{user.username}}</h3>
-  <p>{{user.profile.attendences}}</p>
+  <p>Attendences: {{user.profile.attendences}}</p>
+  <p>Experience: {{experience user}}</p>
 </template>
 
