made experience a DB value to make reactivity easier

--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,6 +1,6 @@
 <template name="userProfile">
   <h3>User: {{user.username}}</h3>
   <p>Attendences: {{user.profile.attendences}}</p>
-  <p>Experience: {{experience user}}</p>
+  <p>Experience: {{user.profile.experience}}</p>
 </template>
 
