--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,5 +1,5 @@
 <template name="userProfile">
-  <h3>User: {{user.username}}</h3>
+<h3>{{> realName}}</h3>
   <p>Attendences: {{user.profile.attendences}}</p>
   <p>Experience: {{user.profile.experience}}</p>
 </template>
