added basic achievement system

--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,6 +1,7 @@
 <template name="userProfile">
-<h3>{{> realName}}</h3>
+  <h3>{{> realName}}</h3>
   <p>Attendences: {{user.profile.attendences}}</p>
   <p>Experience: {{user.profile.experience}}</p>
+  {{> achievements}}
 </template>
 
