--- a/client/templates/achievements/achievements.html
+++ b/client/templates/achievements/achievements.html
@@ -1,6 +1,6 @@
 <template name="achievements">
   <ul>
-    {{#each achievements}}
+    {{#each achievements user}}
     <li>{{name}}</li>
     {{/each}}
   </ul>
