--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,7 +1,10 @@
 <template name="userProfile">
-  <h3>{{> realName}}</h3>
+  <h3>{{> realName user=user}}</h3>
   <p>Attendences: {{user.profile.attendences}}</p>
   <p>Experience: {{user.profile.experience}}</p>
-  {{> achievements}}
+  {{> achievements user=user}}
+  {{#if isAdmin}}
+  <a id="addAttendence" data-username="{{user.username}}"  href="#">Add Attendence</a>
+  {{/if}}
 </template>
 
