re-learned how to spell attendance

--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -4,7 +4,7 @@
   <p>Experience: {{user.profile.experience}}</p>
   {{> achievements user=user}}
   {{#if isAdmin}}
-  <a id="addAttendence" data-username="{{user.username}}"  href="#">Add Attendence</a>
+  <a id="addAttendance" data-username="{{user.username}}"  href="#">Add Attendance</a>
   {{/if}}
 </template>
 
