found more misspelled attendances

--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,6 +1,6 @@
 <template name="userProfile">
   <h3>{{> realName user=user}}</h3>
-  <p>Attendences: {{user.profile.attendences}}</p>
+  <p>Attendances: {{user.profile.attendances}}</p>
   <p>Experience: {{user.profile.experience}}</p>
   {{> achievements user=user}}
   {{#if isAdmin}}
