--- a/client/templates/achievements/achievements.html
+++ b/client/templates/achievements/achievements.html
@@ -1,7 +1,7 @@
 <template name="achievements">
   <ul>
     {{#each achievements user}}
-    <li>{{name}}</li>
+      <li style="{{borderStyle}}">{{name}}</li>
     {{/each}}
   </ul>
 </template>
