--- a/client/templates/attendance/attendance.html
+++ b/client/templates/attendance/attendance.html
@@ -1,3 +1,5 @@
 <template name="attendance">
-  <a id="attendance-button" href="javascript:{}">Sign In</a>
+  <div id="attendance">
+    <a id="attendance-button" href="javascript:{}">Sign In</a>
+  </div>
 </template>
