--- a/client/templates/realName/realName.html
+++ b/client/templates/realName/realName.html
@@ -1,7 +1,9 @@
 <template name="realName">
-  {{#if user.profile.firstName}}
-    {{user.profile.firstName}} {{user.profile.lastName}} ({{user.username}})
-  {{else}}
-    {{user.username}}
-  {{/if}}
+  <div id="realName">
+    {{#if user.profile.firstName}}
+      {{user.profile.firstName}} {{user.profile.lastName}} ({{user.username}})
+    {{else}}
+      {{user.username}}
+    {{/if}}
+  </div>
 </template>
