--- a/client/templates/userProfile/userProfile.html
+++ b/client/templates/userProfile/userProfile.html
@@ -1,11 +1,12 @@
 <template name="userProfile">
-  <h3>{{> realName user=user}}</h3>
-  
-  <p class="attendances">Attendances: {{user.profile.attendances}}</p>
-  <p>Experience: {{user.profile.experience}}</p>
-  {{> achievements user=user}}
-  {{#if isAdmin}}
-  <a id="addAttendance" data-username="{{user.username}}"  href="#">Add Attendance</a>
-  {{/if}}
+  <div id="userProfile">
+    <h3>{{> realName user=user}}</h3>
+    <p class="attendances">Attendances: {{user.profile.attendances}}</p>
+    <p>Experience: {{user.profile.experience}}</p>
+    {{> achievements user=user}}
+    {{#if isAdmin}}
+    <a id="addAttendance" data-username="{{user.username}}"  href="#">Add Attendance</a>
+    {{/if}}
+  </div>
 </template>
 
