--- a/client/templates/signinalt/signinalt.html
+++ b/client/templates/signinalt/signinalt.html
@@ -1,8 +1,7 @@
 <template name="signinalt">
-
-<div class="signinalt well well-lg" data-id="{{ _id }}">
+  <div id="signinalt" class="signinalt well well-lg" data-id="{{ _id }}">
     
     {{> signinForm }}
     
-</div>
+  </div>
 </template>
