restored functionality to signin button

--- a/client/templates/attendance/attendance.html
+++ b/client/templates/attendance/attendance.html
@@ -1,5 +1,5 @@
 <template name="attendance">
   <div id="attendance">
-    <button id="attendance-button" class="btn btn-primary" href="javascript:{}">Sign In</button>
+    <button id="attendance-button" class="btn btn-primary" submit="javascript:{}">Sign In</button>
   </div>
 </template>
